Adds map of places I have visited

--- a/index.html
+++ b/index.html
@@ -101,23 +101,31 @@
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
       </li> -->
 
-      <!-- <li class="bold"> -->
+      <li class="bold">
         <!--
         ICONS:
         mdi-action-assessment
         mdi-social-poll
         mdi-av-equalizer
         -->
-        <!-- <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark blue-text"><i
+        <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark blue-text"><i
             class="mdi-action-assessment small"></i><span>Skills</span></a>
       </li>
-       -->
+      
       <li class="bold">
         <!--
         ICONS:
         -->
         <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark blue-text"><i
             class="mdi-social-school small"></i><span>Education</span></a>
+      </li>
+
+      <li class="bold">
+        <!--
+        ICONS:
+        -->
+        <a aria-label="Navigate to the Places Travelled section" href="#placesTravelled" class="waves-effect waves-dark blue-text"><i
+            class="mdi-map-marker small"></i><span>Places Travelled</span></a>
       </li>
 
       <li class="bold">
@@ -182,6 +190,12 @@
         <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark blue-text"><i
             class="mdi-social-school small"></i><span>Education</span></a>
       </li>
+
+      <li class="bold">
+        <a aria-label="Navigate to the Places Travelled section" href="#placesTravelled" class="waves-effect waves-dark blue-text"><i
+            class="mdi-map-marker small"></i><span>Places Travelled</span></a>
+      </li>
+
       <li class="bold">
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark blue-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
@@ -413,6 +427,16 @@
               </div>
             </div>
         </div>
+      </div>
+    </section>
+
+     <!-- Seventh Section: Places Travelled -->
+     <section id="placesTravelled" class="section scrollspy">
+      <h3 class="page-title white-text blue">Places Travelled</h3>
+      <div class="container">
+        <div class="row">
+          <!-- Places Travelled -->
+          <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1qtAg3gIZqfoaWbKBnKDcJv30rx2as3g&ehbc=2E312F" width="640" height="480"></iframe>
       </div>
     </section>
 
