--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <!-- Google Tag Manager -->
+  <script>
+    function loadAllProjects(y) {
+      const dives = Array.from(document.querySelectorAll('div[data-date]'));
+      if (y) {
+        dives.forEach(div => {
+            // Get the id and data-date of each div
+            const id = div.id;
+            document.getElementById(id).style.visibility = 'visible';
+        });
+      }
+      else{
+        dives.forEach(div => {
+            // Get the id and data-date of each div
+            const id = div.id;
+            document.getElementById(id).style.visibility = 'hidden';
+        });
+        dives.sort((one,two) => {
+          const dateOne = new Date(one.getAttribute('data-date'))
+          const dateTwo = new Date(two.getAttribute('data-date'))
+          return dateOne - dateTwo;
+        });
+        if (dives.length > 0) {
+          const latestDiv = dives[dives.length - 1];
+          document.getElementById(latestDiv.id).style.visibility = 'visible';
+        }
+      }
+    }
+  </script>
+
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -94,12 +123,19 @@
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
       </li>
 
-      <!-- <li class="bold"> -->
+      <li class="bold">
         <!-- mdi-av-web small
              mdi-av-my-library-books small-->
-        <!-- <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark blue-text"><i
+        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark blue-text"><i
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
-      </li> -->
+      </li>
+
+      <li class="bold"></li>
+        <!-- mdi-av-web small
+             mdi-av-my-library-books small-->
+        <a aria-label="Navigate to the Recent Projects section" href="#recentProjects" class="waves-effect waves-dark blue-text"><i
+            class="mdi-av-my-library-books small"></i><span>Recent Projects</span></a>
+      </li>
 
       <li class="bold">
         <!--
@@ -180,6 +216,10 @@
       <li class="bold">
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark blue-text"><i
             class="mdi-av-my-library-books small"></i><span>Projects</span></a>
+      </li>
+      <li class="bold"></li>
+        <a aria-label="Navigate to the Recent Projects section" href="#recentProjects" class="waves-effect waves-dark blue-text"><i
+            class="mdi-av-my-library-books small"></i><span>Recent Projects</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark blue-text"><i
@@ -341,8 +381,6 @@
               </li>
               <li>Developed firmware using CAN protocol for inter-device communication on the car.
               </li>
-              <li>Developed firmware using CAN protocol for inter-device communication on the car.
-              </li>
               <li>
                 Collaborated on the design of the low-voltage architecture for the driverless system.
               </li>
@@ -391,6 +429,251 @@
           </div>
         </div>
 
+      </div>
+    </section>
+
+    <!-- Fourth Section: Projects -->
+    <section id="projects" class="section scrollspy">
+      <h3 class="page-title white-text blue">Projects</h3>
+      <div class="container">
+        <div class="row">
+
+          <!-- UTFR -->
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Screenshot of  web app" src="/assets/img/DV_electrical_architecture.png" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator blue-text hoverline">Autonomous Formula Vehicle<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Designing architecture to enable autonomy of a formula SAE vehcicle.
+                </p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title blue-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li>
+                    Implemented programs to enable autonomy for a formula SAE car using C++ and ROS2
+                  </li>
+                  <li>Developed firmware using CAN protocol for inter-device communication on the car.
+                  </li>
+                  <li>
+                    Collaborated on the design of the low-voltage architecture for the driverless system.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!-- Wireless Data Aquisition -->
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Screenshot of  web app" src="/assets/img/wirless_daq.jpg" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator blue-text hoverline">Wireless Data Aquisition<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Wireless communication for UTFR vechilce to enable Data aquisition
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title brown-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li> Developed architecture to enable wireless architecture </li>
+                  <li> Worked on Software and HArdware involved with enabling wireless CAN transmission</li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!-- ************* -->
+        </div>
+      </div>
+    </section>
+
+    <!-- Fifth Section: Recent Projects -->
+    <section id="recentProjects" class="section scrollspy">
+      <h3 class="page-title white-text blue">Recent Projects</h3>
+      <div class="container">
+        <div class="row">
+
+          <!-- UTFR -->
+          <div class="col s12 m6 l4" id="0" data-date="2024-01-01">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Screenshot of  web app" src="/assets/img/DV_electrical_architecture.png" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator blue-text hoverline">Autonomous Formula Vehicle<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Designing architecture to enable autonomy of a formula SAE vehcicle.
+                </p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title blue-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li>
+                    Implemented programs to enable autonomy for a formula SAE car using C++ and ROS2
+                  </li>
+                  <li>Developed firmware using CAN protocol for inter-device communication on the car.
+                  </li>
+                  <li>
+                    Collaborated on the design of the low-voltage architecture for the driverless system.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!-- Wireless Data Aquisition -->
+          <div class="col s12 m6 l4" id="1" data-date="2024-09-02">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="Screenshot of  web app" src="/assets/img/wirless_daq.jpg" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator blue-text hoverline">Wireless Data Aquisition<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Wireless communication for UTFR vechilce to enable Data aquisition
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title brown-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li> Developed architecture to enable wireless architecture </li>
+                  <li> Worked on Software and HArdware involved with enabling wireless CAN transmission</li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <script>
+            loadAllProjects(false);
+          </script>
+          <button class="row" onclick="loadAllProjects(true)">Load More</button>
+
+          <!-- ************* -->
+        </div>
+
+      </div>
+    </section>
+
+    <!-- Sixth Section: Skills -->
+    <section id="skills" class="section scrollspy">
+      <h3 class="page-title white-text blue">Skills</h3>
+      <div class="container">
+        <!-- Languages and Databases -->
+        <div class="card">
+          <div class="card-content">
+            <h4 class="brown-text light">Languages and Databases</h4>
+            <div class="row text-center">
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-content">
+            <h4 class="brown-text light">Libraries</h4>
+            <div class="row text-center">
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Frameworks -->
+        <div class="card">
+          <div class="card-content">
+            <h4 class="brown-text light">Frameworks</h4>
+            <div class="row text-center">
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Other -->
+        <div class="card">
+          <div class="card-content">
+            <h4 class="brown-text light">Other</h4>
+            <div class="row text-center">
+
+
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/git.png" class="responsive-img" />Git
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/aws.png" class="responsive-img" />AWS
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/assets/img/heroku.png" class="responsive-img" />Heroku
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
